完成 Promise 规范定义的基本功能； 完成单元测试用例的编写；

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "private": false,
     "dependencies": {},
     "devDependencies": {
-        "promises-aplus-tests": "~2",
         "mocha": "*"
     },
     "scripts": {
-        "test": "promises-aplus-tests test/aplus-adapter.js"
+        "test": "mocha ./test/test.promise.js -R dot",
+        "start": "npm run test"
     }
 }
